--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -3,46 +3,73 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="stylesheet" href="..\static\styles.css">
+
+        <!-- cache is disabled to prevent problems with wtf-forms -->
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+        <meta http-equiv="Pragma" content="no-cache">
+        <meta http-equiv="Expires" content="0"> 
+
+        <!-- Link styles -->
+        <link rel="stylesheet" href="..\static\style.css">
+
+        <!-- Link app-icon -->
+        <link rel="icon" type="image/x-icon" href="..\static\wennwo-icon.png">
 
         <title>{% block title %}Wennwo{% endblock %}</title>
     </head>
-    <nav class="navbar">
-        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar">
-            <span class="navbar-toggle-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link" id="index" href="/">Start</a>
-                <a class="nav-item nav-link" id="login" href="/login">Login</a>
-                <a class="nav-item nav-link" id="signup" href="/signup">Registrieren</a>
-                <a class="nav-item nav-link" id="logout" href="/logout">Abmelden</a>
+    <body>
+        <div class="container">
+            <!-- Possibility to show a banner for exapmle on the index page -->
+            {% block banner %}
+            {% endblock %}
+
+            <!-- Navigation for all pages -->
+            <nav class="navbar">
+                <div class="navbar-section">
+                    <!-- Possibility to add custom options to the navbar on a subpage -->
+                    {% block navbar %}
+                        
+                    {% endblock %}
+                    <a class="navbar-item" href="/newsurvey">Neue Umfrage</a>
+                    <a class="navbar-item" href="/" style="border: 1px solid #ffffff;">Startseite</a>
+                </div>
+                <div class="navbar-section">
+                {% if current_user.is_authenticated %}
+                    <a class="navbar-item" href="/logout">Abmelden</a>
+                {% else %}
+                    <a class="navbar-item" href="/login">Login</a>
+                    <a class="navbar-item" href="/signup">Registrieren</a>
+                {% endif %}
+                </div>
+            </nav>
+
+            <!-- Handle flask flash mesages -->
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            {% for category, message in messages %}
+            {% if category == 'error' %}
+            <div class="error" role="alert">
+                {{ message }}
+            </div>
+            {% elif category == 'success' %}
+            <div class="success" role="alert">
+                {{ message }}
+            </div>
+            {% endif %}
+            {% endfor %}
+            {% endif %}
+            {% endwith %}
+
+            <!-- Area to show the content of the page -->
+            <div class="content">
+                {% block content %}
+                content
+                {% endblock %}
             </div>
         </div>
-    </nav>
-
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-    {% for category, message in messages %}
-    {% if category == 'error' %}
-    <div class="error" role="alert">
-        {{ message }}
-    </div>
-    {% elif category == 'success' %}
-    <div class="success" role="alert">
-        {{ message }}
-    </div>
-    {% endif %}
-    {% endfor %}
-    {% endif %}
-    {% endwith %}
-
-    <div class="container">
-        {% block content %}
-        content
-        {% endblock %}
-    </div>
-    <body>
-        
+        <footer>
+            <p class="metadata">&copy; 2024 Wennwo</p>
+        </footer>        
     </body>
+    <footer>
 </html>
