--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -2,33 +2,33 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<form method="POST">
-    <!-- Show the login form -->
-    {{ form.hidden_tag() }}
-    {{ form.csrf_token }}
-    
-    <h1>Willkommen zurück!</h1>
-    <table>
-        <tr>
-            <td>
-                {{ form.email.label }}
-            </td>
-            <td>
-                {{ form.email(size=50) }}
-            </td>
-        </tr>
-        <tr>
-            <td>
-                {{ form.password.label }}
-            </td>
-            <td>
-                {{ form.password(size=50) }}
-            </td>
-        </tr>
-    </table>
-
-    <p>{{ form.remember() }} {{ form.remember.label }}</p> 
-    <p>{{ form.submit(class="submit-btn") }} </p>
-         
-</form>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card bg-dark text-white">
+                <div class="card-header">
+                    <h3 class="mb-0">Login</h3>
+                </div>
+                <div class="card-body">
+                    <form method="POST">
+                        {{ form.hidden_tag() }}
+                        {{ form.csrf_token }}
+                        <div class="form-group">
+                            {{ form.email.label(class="form-control-label") }}
+                            {{ form.email(class="form-control form-control-lg") }}
+                        </div>
+                        <div class="form-group">
+                            {{ form.password.label(class="form-control-label") }}
+                            {{ form.password(class="form-control form-control-lg") }}
+                        </div>
+                        <div class="form-group">
+                            {{ form.remember() }} {{ form.remember.label }}
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-lg float-right">Login</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
