--- a/website/templates/modifypermissions.html
+++ b/website/templates/modifypermissions.html
@@ -2,7 +2,7 @@
 {% block title %}Neue Zeit{% endblock %}
 
 {% block navbar %}
-    <a class="navbar-item" href="/survey/{{ survey_id }}">Zur Umfrage</a>
+    <a class="nav-item nav-link" href="/survey/{{ survey_id }}">Zur Umfrage</a>
 {% endblock %}
 
 {% block content %}
@@ -23,10 +23,10 @@
         </tr>
         <tr>
             <td>
-                {{ form.mode() }}
+                {{ form.mode(class="form-control form-control-dark bg-dark text-white") }}
             </td>
             <td>
-                {{ form.modebtn(class="submit-btn") }}
+                {{ form.modebtn(class="btn btn-primary") }}
             </td>
         </tr>
     </table>
@@ -44,15 +44,15 @@
         </tr>
         <tr>
             <td style="padding-right: 20px;">
-                {{ form.newemail(size=40) }}
+                {{ form.newemail(class="form-control form-control-dark bg-dark text-white") }}
             </td>
             <td>
-                {{ form.newpermission }}
+                {{ form.newpermission(class="form-control form-control-dark bg-dark text-white") }}
             </td>
         </tr>
     </table>
     <p>
-        {{ form.submitbtn(class="submit-btn") }} 
+        {{ form.submitbtn(class="btn btn-primary p-1 m-1") }} 
     </p>
 
     <!-- List existing permissions -->
@@ -69,22 +69,22 @@
         {% for permission in form.permissions %}
         <tr>
             <td style="padding-right: 20px;">
-                {{ permission.email(readonly=True) }}
-                {{ permission.user_id(class="hidden") }}
+                {{ permission.email(readonly=True,class="form-control form-control-dark bg-dark text-white", style="min-width: 300px;") }}
+                {{ permission.user_id(type="hidden") }}
             </td>
             {% if permission.user_id.data != current_user.id %}
             <td style="padding-right: 20px;">
-                {{ permission.permission }}
+                {{ permission.permission(class="form-control form-control-dark bg-dark text-white") }}
             </td>
             <td style="padding-right: 20px;">
-                {{ permission.updatebtn(class="button") }}
+                {{ permission.updatebtn(class="btn btn-secondary") }}
             </td>
             <td style="padding-right: 20px;">
-                {{ permission.deletebtn(class="delete-btn") }}
+                {{ permission.deletebtn(class="btn btn-danger") }}
             </td>
             {% else %}
             <td style="padding-right: 20px;">
-                <div class="disabled">{{ permission.permission }}</div>
+                <div class="disabled">{{ permission.permission(class="form-control form-control-dark bg-dark text-white") }}</div>
             </td>
             <td style="padding-right: 20px;"></td>
             <td style="padding-right: 20px;"></td>
