--- a/website/templates/newsurvey.html
+++ b/website/templates/newsurvey.html
@@ -2,31 +2,31 @@
 {% block title %}Neue Umfrage{% endblock %}
 
 {% block content %}
-<form method="POST">
-    <!-- Show the form for a new survey -->
-    {{ form.hidden_tag() }}
-    {{ form.csrf_token }}
-    
-    <h1>Finde ein passendes Datum!</h1>
-    <table>
-        <tr>
-            <td>
-                {{ form.title.label }}
-            </td>
-            <td>
-                {{ form.title(size=50) }}
-            </td>
-        </tr>
-        <tr>
-            <td>
-                {{ form.description.label }}
-            </td>
-            <td>
-                {{ form.description(size=50) }}
-            </td>
-        </tr>
-    </table>
-    <p>{{ form.submit(class="submit-btn") }} </p>
-         
-</form>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card bg-dark text-white">
+                <div class="card-header">
+                    <h3 class="mb-0">Neue Umfrage</h3>
+                </div>
+                <div class="card-body">
+                    <form method="POST">
+                        <!-- Show the form for a new survey -->
+                        {{ form.hidden_tag() }}
+                        {{ form.csrf_token }}
+                        <div class="form-group">
+                            {{ form.title.label(class="form-control-label") }}
+                            {{ form.title(class="form-control form-control-lg") }}
+                        </div>
+                        <div class="form-group">
+                            {{ form.description.label(class="form-control-label") }}
+                            {{ form.description(class="form-control form-control-lg") }}
+                        </div>
+                        {{ form.submit(class="btn btn-primary") }}
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
